--- a/Post/Base.lproj/Main.storyboard
+++ b/Post/Base.lproj/Main.storyboard
@@ -297,7 +297,7 @@
         <!--登陆界面-->
         <scene sceneID="eS7-ab-by0">
             <objects>
-                <viewController title="登陆" id="1NF-XS-BUm" userLabel="登陆界面" sceneMemberID="viewController">
+                <viewController title="登陆" id="1NF-XS-BUm" userLabel="登陆界面" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kJn-Rv-cSz"/>
                         <viewControllerLayoutGuide type="bottom" id="t61-ZL-TdG"/>
@@ -307,25 +307,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pmf-ql-nPV">
-                                <rect key="frame" x="90" y="114" width="420" height="30"/>
+                                <rect key="frame" x="90" y="164" width="420" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="beF-QQ-bzz">
-                                <rect key="frame" x="90" y="169" width="420" height="30"/>
+                                <rect key="frame" x="90" y="219" width="420" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUE-xl-XyK">
-                                <rect key="frame" x="90" y="224" width="420" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUE-xl-XyK">
+                                <rect key="frame" x="90" y="274" width="420" height="33"/>
                                 <color key="backgroundColor" red="0.35055745739999999" green="0.409601673" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="登陆">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="ccy-4O-1Ws">
-                                <rect key="frame" x="90" y="285" width="60" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="ccy-4O-1Ws">
+                                <rect key="frame" x="90" y="332" width="60" height="30"/>
                                 <state key="normal" title="用户注册">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -333,8 +333,8 @@
                                     <segue destination="7eK-wC-xDz" kind="show" id="hyU-XO-dwy"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="tSC-ac-neC">
-                                <rect key="frame" x="441" y="285" width="69" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="tSC-ac-neC">
+                                <rect key="frame" x="441" y="332" width="69" height="30"/>
                                 <state key="normal" title="找回密码?">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -347,6 +347,7 @@
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="beF-QQ-bzz" secondAttribute="centerX" id="0LC-3c-qge"/>
                             <constraint firstItem="pmf-ql-nPV" firstAttribute="width" secondItem="XS5-V2-bIT" secondAttribute="width" multiplier="0.7" id="FDv-Dh-RWP"/>
+                            <constraint firstItem="pmf-ql-nPV" firstAttribute="top" secondItem="kJn-Rv-cSz" secondAttribute="top" constant="100" id="LlX-OM-pIR"/>
                             <constraint firstItem="ccy-4O-1Ws" firstAttribute="leading" secondItem="beF-QQ-bzz" secondAttribute="leading" id="OZa-fV-jfv"/>
                             <constraint firstItem="beF-QQ-bzz" firstAttribute="width" secondItem="pmf-ql-nPV" secondAttribute="width" id="QzD-J7-MhM"/>
                             <constraint firstItem="pmf-ql-nPV" firstAttribute="top" secondItem="kJn-Rv-cSz" secondAttribute="bottom" constant="50" id="W91-c6-K3j"/>
@@ -359,6 +360,11 @@
                             <constraint firstItem="beF-QQ-bzz" firstAttribute="top" secondItem="pmf-ql-nPV" secondAttribute="bottom" constant="25" id="v75-gp-623"/>
                             <constraint firstItem="beF-QQ-bzz" firstAttribute="width" secondItem="zUE-xl-XyK" secondAttribute="width" id="zag-eA-b0r"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="W91-c6-K3j"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fZa-30-UUt" userLabel="First Responder" sceneMemberID="firstResponder"/>
